<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <FrameLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:id="@+id/container"
            tools:context=".view.AuthActivity">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:src="@drawable/close"
                     android:padding="@dimen/padding_normal"
                     android:id="@+id/close"
                     android:layout_gravity="top|start"
                     android:layout_marginStart="@dimen/padding_normal"
                     android:layout_marginTop="@dimen/padding_normal"
                     android:background="?attr/selectableItemBackgroundBorderless"/>

        <include
                android:id="@+id/loading"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/loading"/>

        <io.codelabs.widget.ForegroundLinearLayout android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:orientation="vertical"
                                                   android:gravity="center"
                                                   android:id="@+id/content"
                                                   android:padding="@dimen/padding_large">

            <io.codelabs.widget.BaselineGridTextView android:layout_width="wrap_content"
                                                     android:padding="@dimen/spacing_normal"
                                                     android:text="@string/app_name"
                                                     android:textAppearance="@style/BlogAppTheme.Headline5"

                                                     android:layout_height="wrap_content"/>


            <io.codelabs.widget.ForegroundImageView android:layout_width="@dimen/large_avatar_size"
                                                    android:src="@drawable/logo_black_large"
                                                    android:layout_height="@dimen/large_avatar_size"/>

            <io.codelabs.widget.BaselineGridTextView android:layout_width="wrap_content"
                                                     android:padding="@dimen/spacing_micro"
                                                     android:text="@string/login_prompt"
                                                     android:textAppearance="@style/BlogAppTheme.SubTitle1"
                                                     android:textColor="@color/text_secondary_dark"
                                                     android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:hint="@string/email_address"
                                                                   android:layout_marginTop="@dimen/spacing_xlarge"
                                                                   style="@style/BlogAppTheme.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:layout_height="wrap_content"
                                                                         android:id="@+id/email"
                                                                         android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:hint="@string/password"
                                                                   android:layout_marginTop="@dimen/spacing_normal"
                                                                   style="@style/BlogAppTheme.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                         android:layout_height="wrap_content"
                                                                         android:id="@+id/password"
                                                                         android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                               android:layout_height="wrap_content"
                                                               android:layout_marginTop="@dimen/spacing_xlarge"
                                                               android:text="@string/sign_in"
                                                               android:id="@+id/login"
                                                               android:enabled="false"
                                                               style="@style/BlogAppTheme.Button"
                                                               app:icon="@drawable/login_icon"/>

        </io.codelabs.widget.ForegroundLinearLayout>


    </FrameLayout>
</layout>